// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMarker renders link with trace 1`] = `
<EuiPopover
  anchorPosition="upCenter"
  button={
    <ForwardRef(Styled(Legend))
      clickable={true}
      color="#bd271e"
      onClick={[Function]}
      shape="square"
    />
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="popover"
  isOpen={false}
  ownFocus={false}
  panelPaddingSize="m"
>
  <styled.div>
    <Styled(Legend)
      indicator={[Function]}
      text="10,000 μs"
    />
    <Legend
      color="#fff"
      key="#fff"
      text="bar"
    />
    <EuiText
      size="s"
    >
      <Styled(ErrorDetailLink)
        errorGroupId="123"
        query={
          Object {
            "kuery": "trace.id%20%3A%20%22123%22",
            "rangeFrom": undefined,
            "rangeTo": undefined,
          }
        }
        serviceName="bar"
      />
    </EuiText>
  </styled.div>
</EuiPopover>
`;

exports[`ErrorMarker renders link with trace and transaction 1`] = `
<EuiPopover
  anchorPosition="upCenter"
  button={
    <ForwardRef(Styled(Legend))
      clickable={true}
      color="#bd271e"
      onClick={[Function]}
      shape="square"
    />
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="popover"
  isOpen={false}
  ownFocus={false}
  panelPaddingSize="m"
>
  <styled.div>
    <Styled(Legend)
      indicator={[Function]}
      text="10,000 μs"
    />
    <Legend
      color="#fff"
      key="#fff"
      text="bar"
    />
    <EuiText
      size="s"
    >
      <Styled(ErrorDetailLink)
        errorGroupId="123"
        query={
          Object {
            "kuery": "trace.id%20%3A%20%22123%22%20and%20transaction.id%20%3A%20%22456%22",
            "rangeFrom": undefined,
            "rangeTo": undefined,
          }
        }
        serviceName="bar"
      />
    </EuiText>
  </styled.div>
</EuiPopover>
`;

exports[`ErrorMarker renders link with transaction 1`] = `
<EuiPopover
  anchorPosition="upCenter"
  button={
    <ForwardRef(Styled(Legend))
      clickable={true}
      color="#bd271e"
      onClick={[Function]}
      shape="square"
    />
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="popover"
  isOpen={false}
  ownFocus={false}
  panelPaddingSize="m"
>
  <styled.div>
    <Styled(Legend)
      indicator={[Function]}
      text="10,000 μs"
    />
    <Legend
      color="#fff"
      key="#fff"
      text="bar"
    />
    <EuiText
      size="s"
    >
      <Styled(ErrorDetailLink)
        errorGroupId="123"
        query={
          Object {
            "kuery": "transaction.id%20%3A%20%22456%22",
            "rangeFrom": undefined,
            "rangeTo": undefined,
          }
        }
        serviceName="bar"
      />
    </EuiText>
  </styled.div>
</EuiPopover>
`;

exports[`ErrorMarker renders link without trance and transaction 1`] = `
<EuiPopover
  anchorPosition="upCenter"
  button={
    <ForwardRef(Styled(Legend))
      clickable={true}
      color="#bd271e"
      onClick={[Function]}
      shape="square"
    />
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="popover"
  isOpen={false}
  ownFocus={false}
  panelPaddingSize="m"
>
  <styled.div>
    <Styled(Legend)
      indicator={[Function]}
      text="10,000 μs"
    />
    <Legend
      color="#fff"
      key="#fff"
      text="bar"
    />
    <EuiText
      size="s"
    >
      <Styled(ErrorDetailLink)
        errorGroupId="123"
        query={
          Object {
            "kuery": "",
            "rangeFrom": undefined,
            "rangeTo": undefined,
          }
        }
        serviceName="bar"
      />
    </EuiText>
  </styled.div>
</EuiPopover>
`;
